--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classname": "^0.0.0",
     "classnames": "^2.3.2",
+    "mongodb": "^5.7.0",
     "next": "13.4.12",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
